--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -70,7 +70,7 @@
 .me {
   width: 60%;
   border-radius: 5px;
-  padding: 5px;
+  padding: 3rem 5px;
   display: flex;
   justify-content: space-evenly;
   flex-direction: column;
