--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,5 +1,101 @@
 #contact-section {
   min-height: 100vh;
   width: 100%;
-  background-color: rgb(85, 151, 243);
+  background-color: #515151;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+#contact-section:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url("./../../assets/pattern.svg");
+
+  background-repeat: repeat;
+  opacity: 0.08;
+}
+
+.form-container {
+  background-color: rgba(51, 51, 51, 0.5);
+  width: 40%;
+  padding: 3rem;
+}
+
+.contactform {
+  display: flex;
+  flex-direction: column;
+  z-index: 999;
+  position: relative;
+}
+.contactform label {
+  color: #fff;
+}
+.contactform input {
+  width: 100%;
+}
+
+#email,
+#name,
+#message {
+  border-radius: 5px;
+  padding: 1rem;
+  border: none;
+  font-size: 1em;
+}
+
+.formField {
+  margin-bottom: 2rem;
+  display: flex;
+  flex-direction: column;
+}
+
+textarea {
+  resize: none;
+}
+
+.contact-title {
+  color: #fff;
+  text-align: center;
+  font-size: 1.8em;
+  position: relative;
+  width: 100%;
+  transform: translateY(-5rem);
+}
+
+.contact-title::after {
+  content: "";
+  position: absolute;
+  top: calc(100% + 1.5rem);
+  height: 5px;
+  width: 3rem;
+  background: rgb(255, 153, 0);
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 5px;
+}
+
+.submit-button {
+  z-index: 99;
+  position: relative;
+  color: #333;
+  text-transform: uppercase;
+  width: fit-content;
+  font-weight: 700;
+  border-radius: 5px;
+  padding: 1rem 2rem;
+  cursor: pointer;
+  background: linear-gradient(to left, rgb(255, 153, 0) 50%, #333 50%) right;
+  background-size: 210% 100%;
+  background-position: right bottom;
+  transition: all 0.6s ease-in-out;
+  border: none;
+}
+
+.submit-button:hover {
+  background-position: left bottom;
+  color: #fff;
 }
