--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,10 +1,10 @@
 #about-section {
   min-height: 100vh;
   width: 100%;
-  background-color: #515151;
+  background-color: rgba(51, 51, 51, 0.85);
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
 
 #about-section:before {
@@ -13,13 +13,12 @@
   width: 100%;
   height: 100%;
   background-image: url("./../../assets/pattern.svg");
-
   background-repeat: repeat;
   opacity: 0.08;
 }
 
 .about-content {
-  width: 60%;
+  width: 70%;
 
   border-radius: 5px;
   display: flex;
@@ -34,6 +33,7 @@
   font-size: 1.8em;
   position: relative;
   width: 100%;
+  margin-top: 5rem;
 }
 
 .about-title::after {
@@ -52,7 +52,7 @@
   text-align: left;
 
   color: #fff;
-  font-size: 1em;
+  font-size: 1.1em;
   width: 100%;
   margin-bottom: 2rem;
 }
@@ -62,13 +62,20 @@
   font-size: 2em;
 }
 
+.about-image-container {
+  width: 50%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+}
+
 .meImg {
-  width: 40%;
+  width: 80%;
   border-radius: 5px;
   object-fit: cover;
 }
 .me {
-  width: 60%;
+  width: 55%;
   border-radius: 5px;
   padding: 3rem 5px;
   display: flex;
@@ -77,8 +84,7 @@
 }
 
 .skills-container {
-  transform: translateY(3rem);
-  margin-top: 3rem;
+  transform: translateY(1rem);
   display: flex;
   justify-content: space-between;
   width: 100%;
@@ -117,6 +123,7 @@
   width: 40px;
   height: 40px;
 }
+
 .icon:hover {
   transition: all 0.3s ease-in-out;
   transform: rotate(-15deg);
@@ -152,7 +159,6 @@
   background-position: right bottom;
   transition: all 0.6s ease-in-out;
   margin-top: 3rem;
-  transform: translateY(3rem);
 }
 
 .about-button:hover {
