--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,23 @@
   font-family: Satoshi;
   margin: 0;
 }
+
+body {
+  min-height: 100vh;
+  width: 100%;
+  background-color: rgba(51, 51, 51, 0.85);
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+body:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  min-height: 100vh;
+  background-size: 30%;
+  background-image: url("./assets/pattern.svg");
+  background-repeat: repeat;
+  opacity: 0.05;
+}
