--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,25 +1,14 @@
 #about-section {
-  min-height: 100vh;
   width: 100%;
-  background-color: rgba(51, 51, 51, 0.85);
+
   display: flex;
   justify-content: center;
   align-items: flex-start;
 }
 
-#about-section:before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-image: url("./../../assets/pattern.svg");
-  background-repeat: repeat;
-  opacity: 0.08;
-}
-
 .about-content {
   width: 70%;
-
+  margin-top: 2rem;
   border-radius: 5px;
   display: flex;
   justify-content: center;
@@ -52,25 +41,42 @@
   text-align: left;
 
   color: #fff;
-  font-size: 1.1em;
+  font-size: 1em;
   width: 100%;
   margin-bottom: 2rem;
+  margin-left: 5px;
 }
 
 .introHeading {
   color: rgb(255, 153, 0);
   font-size: 2em;
+  margin-left: 5px;
 }
 
 .about-image-container {
-  width: 50%;
+  width: 40%;
+  position: relative;
   display: flex;
   align-items: flex-end;
   justify-content: flex-end;
+  background-color: rgba(51, 51, 51, 0.7);
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.about-image-container:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  min-height: 100%;
+  background-size: 30%;
+  background-image: url("../../assets/pattern.svg");
+  background-repeat: repeat;
+  opacity: 0.09;
 }
 
 .meImg {
-  width: 80%;
+  width: 100%;
   border-radius: 5px;
   object-fit: cover;
 }
@@ -84,15 +90,14 @@
 }
 
 .skills-container {
-  transform: translateY(1rem);
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: 100%;
   padding: 1rem 0 0 3rem;
   z-index: 99;
   position: relative;
   margin-top: 3rem;
-  background-color: rgba(51, 51, 51, 0.5);
   border-radius: 5px;
 }
 
@@ -103,31 +108,61 @@
   flex-direction: column;
 }
 
+.meine-skills {
+  font-size: 1.3em;
+  color: rgb(255, 153, 0);
+  font-weight: 500;
+  margin-bottom: 1rem;
+  margin-left: 5px;
+}
+
 .skills-list {
   list-style: none;
   padding: 0;
+  display: flex;
+  flex-wrap: wrap;
 }
 .skills-list li {
   background-color: rgba(51, 51, 51, 0.5);
-  display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border-radius: 5px;
-  padding: 0.7rem 1rem;
+  padding: 1rem 2rem;
   margin: 5px;
   font-weight: bold;
   overflow: hidden;
-  height: 70px;
-  width: 70px;
+  position: relative;
+  filter: grayscale(100);
+  transition: all 0.3s ease-in-out;
+}
+
+.skills-list li:hover {
+  filter: grayscale(0);
+  transition: filter 0.3s ease-in-out;
+  outline: 1px solid rgb(255, 153, 0);
+}
+
+.skills-list li:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  max-height: 100%;
+  background-size: 10%;
+  background-image: url("../../assets/pattern.svg");
+  background-repeat: repeat;
+  opacity: 0.6;
 }
 
 .icon {
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
+  margin-right: 5px;
 }
 
-.icon:hover {
-  transition: all 0.3s ease-in-out;
-  transform: rotate(-15deg);
-  overflow: hidden;
+.skill-name {
+  font-size: 0.8em;
+  color: #000;
 }
 
 .designskills,
@@ -140,8 +175,9 @@
 .skillHeading {
   color: rgb(255, 153, 0);
   margin-bottom: 5px;
-  font-size: 1.3em;
+  font-size: 1.1em;
   margin-left: 5px;
+  font-weight: 400;
 }
 
 .about-button {
@@ -159,6 +195,7 @@
   background-position: right bottom;
   transition: all 0.6s ease-in-out;
   margin-top: 3rem;
+  margin-bottom: 8rem;
 }
 
 .about-button:hover {
