--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -14,9 +14,9 @@
   width: 100%;
   height: 100%;
   background-image: url("./../../assets/pattern.svg");
-
+  background-size: 30%;
   background-repeat: repeat;
-  opacity: 0.08;
+  opacity: 0.05;
 }
 
 .form-container {
