--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: flex-start;
+  position: relative;
 }
 
 .about-content {
@@ -99,6 +100,7 @@
   position: relative;
   margin-top: 3rem;
   border-radius: 5px;
+  margin-bottom: 8rem;
 }
 
 .skills {
@@ -109,7 +111,7 @@
 }
 
 .meine-skills {
-  font-size: 1.3em;
+  font-size: 1.4em;
   color: rgb(255, 153, 0);
   font-weight: 500;
   margin-bottom: 1rem;
@@ -135,6 +137,7 @@
   position: relative;
   filter: grayscale(100);
   transition: all 0.3s ease-in-out;
+  cursor: pointer;
 }
 
 .skills-list li:hover {
@@ -151,7 +154,7 @@
   background-size: 10%;
   background-image: url("../../assets/pattern.svg");
   background-repeat: repeat;
-  opacity: 0.6;
+  opacity: 1;
 }
 
 .icon {
@@ -175,7 +178,7 @@
 .skillHeading {
   color: rgb(255, 153, 0);
   margin-bottom: 5px;
-  font-size: 1.1em;
+  font-size: 1.05em;
   margin-left: 5px;
   font-weight: 400;
 }
@@ -189,16 +192,35 @@
   font-weight: 700;
   border-radius: 5px;
   padding: 1rem 2rem;
+  font-size: 1em;
   cursor: pointer;
   background: linear-gradient(to left, rgb(255, 153, 0) 50%, #333 50%) right;
   background-size: 210% 100%;
   background-position: right bottom;
   transition: all 0.6s ease-in-out;
   margin-top: 3rem;
-  margin-bottom: 8rem;
+  margin-left: 5px;
 }
 
 .about-button:hover {
   background-position: left bottom;
   color: #fff;
+}
+.arrowL {
+  width: 20%;
+  height: 65vh;
+  left: 3%;
+  bottom: -38vh;
+  padding-top: 5px;
+  position: absolute;
+}
+.cls-1-1 {
+  fill: none;
+  stroke: #f90;
+  stroke-miterlimit: 10;
+  stroke-width: 2px;
+}
+
+.cls-2-2 {
+  fill: #f90;
 }
