--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -111,6 +111,7 @@ textarea {
   background-size: 210% 100%;
   background-position: right bottom;
   transition: all 0.6s ease-in-out;
+  font-size: 1em;
   border: none;
 }
 
