--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -54,6 +54,7 @@ span:hover {
   background-size: 210% 100%;
   background-position: right bottom;
   transition: all 0.6s ease-in-out;
+  font-size: 1em;
 }
 
 .hero-button:hover {
