--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -20,7 +20,7 @@
 
 #hero-title {
   text-align: center;
-  font-size: 5em;
+  font-size: calc(1rem + 3vw);
   font-weight: 900;
   margin-bottom: 1.8rem;
   color: #fff;
@@ -28,7 +28,7 @@
 
 .hero-text {
   text-align: center;
-  font-size: 1.5em;
+  font-size: calc(1rem + 0.5vw);
   width: 80%;
   margin-bottom: 1.8rem;
   color: #fff;
@@ -54,7 +54,7 @@ span:hover {
   background-size: 210% 100%;
   background-position: right bottom;
   transition: all 0.6s ease-in-out;
-  font-size: 1em;
+  font-size: 1rem;
 }
 
 .hero-button:hover {
