--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,5 +1,5 @@
 #logo {
-  width: 120px;
+  width: calc(5rem + 2vw);
 }
 
 .header {
@@ -26,31 +26,84 @@
   height: 85px;
 }
 
-#navigation {
+.navigation {
   display: flex;
-  list-style: none;
 }
-#navigation li {
+.navigation li {
   cursor: pointer;
+  list-style-type: none;
 }
 
 .list-item {
   padding: 2.2rem 3rem;
-  display: inline-block;
-  font-size: 0.9em;
+  font-size: calc(0.6rem + 0.2vw);
   color: #fff;
   text-transform: uppercase;
   letter-spacing: 1px;
   font-weight: 700;
   text-decoration: none;
 }
+.list-item:hover {
+  color: rgb(255, 153, 0);
+}
 
 .list-item-scroll {
   color: #333;
-  font-size: 0.8em;
+  font-size: calc(0.6rem + 0.2vw);
   padding: 1rem 1.7rem;
 }
 
-.active {
-  color: red;
+.mobile-menu-icon {
+  font-size: calc(1.2rem + 1vw);
+  cursor: pointer;
+  display: none;
+  color: #fff;
+}
+
+/* MEDIA QUERIES */
+
+@media only screen and (max-width: 1024px) {
+  .mobile-menu-icon {
+    display: inline-block;
+  }
+
+  .header {
+    padding: 1rem 2rem;
+  }
+
+  .header-bg {
+    /* background-color: rgba(255, 153, 0, 0.9);*/
+    border-radius: 0;
+    width: 100%;
+    margin-left: 0;
+    margin-top: 0;
+    height: 85px;
+  }
+
+  .list-item-scroll {
+    color: #fff;
+  }
+
+  .navigation {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    background-color: rgba(51, 51, 51, 0.9);
+    height: 100%;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    transform: translateY(-100vh);
+    transition: 1s;
+    padding-left: 0;
+  }
+
+  .responsive_nav {
+    transform: none !important;
+  }
+
+  .navigation li {
+    margin: 2% 0 !important;
+  }
 }
