--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,6 +1,6 @@
 #about-section {
-  width: 100%;
-
+  max-width: 100%;
+  box-sizing: border-box;
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -57,6 +57,7 @@
 .about-image-container {
   width: 40%;
   position: relative;
+  margin-top: 3rem;
   display: flex;
   align-items: flex-end;
   justify-content: flex-end;
@@ -93,7 +94,7 @@
 .skills-container {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   width: 100%;
   padding: 1rem 0 0 3rem;
   z-index: 99;
@@ -223,4 +224,108 @@
 
 .cls-2-2 {
   fill: #f90;
+}
+
+/* MEDIA QUERIES */
+
+@media only screen and (max-width: 1024px) {
+  #about-section {
+    width: 100%;
+  }
+  .about-section-container {
+    display: flex;
+
+    box-sizing: border-box;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .about-content {
+    width: 90%;
+    text-align: center;
+  }
+
+  .about-title {
+    font-size: 1.2rem;
+    margin-left: 0;
+  }
+
+  .introHeading {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+    margin-left: 0;
+  }
+
+  .intro {
+    text-align: center;
+    padding: 0 2rem;
+    color: #fff;
+    font-size: 1rem;
+    width: 100%;
+    margin-bottom: 2rem;
+    margin-left: 0;
+  }
+
+  .skills-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    padding-left: 0;
+    margin-left: 0;
+  }
+
+  .me {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    margin-left: 0;
+    order: 2;
+  }
+
+  .skills-list {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-left: 0;
+  }
+
+  .skills-list li {
+    padding: 1rem 1rem;
+    width: 180px;
+    filter: grayscale(0);
+  }
+
+  .meine-skills {
+    font-size: 1.4em;
+    color: rgb(255, 153, 0);
+    font-weight: 500;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    margin-left: 0;
+  }
+
+  .skillHeading {
+    color: rgb(255, 153, 0);
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    font-size: 1.05em;
+    font-weight: 400;
+    margin-left: 0;
+  }
+  .about-image-container {
+    width: 70%;
+    justify-content: center;
+    order: 1;
+  }
+
+  .meImg {
+    width: 100%;
+    border-radius: 5px;
+    object-fit: cover;
+  }
 }
