--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -19,9 +19,17 @@
   opacity: 0.05;
 }
 
+.contact-content {
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
 .form-container {
   background-color: rgba(51, 51, 51, 0.5);
-  width: 40%;
+  width: 50%;
   padding: 3rem;
 }
 
@@ -118,4 +126,35 @@ textarea {
 .submit-button:hover {
   background-position: left bottom;
   color: #fff;
+}
+
+@media only screen and (max-width: 1024px) {
+  .contact-title {
+    font-size: 1.2rem;
+    margin-left: 0;
+    margin-top: 8rem;
+  }
+
+  .contact-content {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 3rem 3rem 3rem;
+  }
+
+  .contact-text {
+    text-align: center;
+  }
+  .form-container {
+    background-color: rgba(51, 51, 51, 0.5);
+    width: 100%;
+    padding: 3rem;
+    z-index: 999;
+    position: relative;
+  }
+
+  #contact-section:before {
+    background-size: 70%;
+  }
 }
