--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -19,3 +19,16 @@
   width: 1.5vw;
   cursor: pointer;
 }
+
+@media only screen and (max-width: 1024px) {
+  .footer-container {
+    position: relative;
+    z-index: 9999;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem 5rem;
+  }
+}
