--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -98,3 +98,55 @@
   font-size: 0.8em;
   margin: 5px 5px 5px 0;
 }
+@media only screen and (max-width: 1024px) {
+  .project-container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+    justify-content: flex-start;
+  }
+
+  .projects-title {
+    font-size: 1.2rem;
+  }
+
+  .projects-content {
+    width: 80%;
+    text-align: center;
+    padding-left: 0;
+  }
+
+  .project-info {
+    width: 100%;
+    text-align: center;
+  }
+
+  .project-title {
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
+  }
+
+  .project-description {
+    font-size: 1rem;
+    width: 100%;
+    margin-bottom: 1rem;
+  }
+
+  .stack-element {
+    font-size: 0.7rem;
+    padding: 1% 3%;
+    font-size: 0.8em;
+    margin: 5px 5px 5px 0;
+  }
+
+  .project-image-container {
+    width: 100%;
+  }
+
+  .project-image {
+    width: 90%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
