--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -150,11 +150,26 @@ textarea {
     background-color: rgba(51, 51, 51, 0.5);
     width: 100%;
     padding: 3rem;
-    z-index: 999;
+    z-index: 99;
     position: relative;
   }
 
   #contact-section:before {
     background-size: 70%;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  #contact-section {
+    max-width: 100vw;
+  }
+  .contact-section-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .contact-content {
+    width: 90%;
+    padding: 0;
   }
 }
