--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -276,7 +276,7 @@
   }
 
   .me {
-    width: 100%;
+    width: 80%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -327,5 +327,52 @@
     width: 100%;
     border-radius: 5px;
     object-fit: cover;
+  }
+
+  .arrowL {
+    width: 50%;
+    height: 1000px;
+    left: -10%;
+
+    padding-top: 5px;
+    position: absolute;
+    opacity: 0.5;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  #about-section {
+    max-width: 100vw;
+    overflow-x: clip;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .about-content {
+    max-width: 100%;
+    overflow-x: clip;
+  }
+
+  .skills-container {
+    max-width: 100%;
+  }
+
+  .me {
+    width: 100%;
+  }
+
+  .about-image-container {
+    width: 100%;
+  }
+
+  .intro {
+    padding: 1rem;
+    font-size: 1rem;
+    margin-bottom: 4rem;
+  }
+
+  .skills-list li {
+    width: 45%;
   }
 }
