--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -29,6 +29,29 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding: 1rem 5rem;
+    align-items: center;
+    padding: 1rem 3rem;
+  }
+  .linkedin {
+    width: 2rem;
+  }
+  .copyright {
+    color: #ff9900;
+    font-weight: 600;
+    font-size: 0.7em;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .footer-container {
+    position: relative;
+    z-index: 9999;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 2rem;
   }
 }
