--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -1,15 +1,14 @@
 #hero-section {
   min-height: 100vh;
   width: 100%;
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   position: relative;
 }
 
 .hero-content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   max-width: 90rem;
   width: 75%;
   display: flex;
@@ -128,6 +127,10 @@ span:hover {
 /* MEDIA QUERIES */
 
 @media only screen and (max-width: 1024px) {
+  #hero-section {
+    overflow-x: clip;
+  }
+
   span {
     color: rgb(255, 153, 0);
     display: inline-block;
@@ -144,5 +147,48 @@ span:hover {
 
   .hero-title span {
     white-space: nowrap;
+  }
+
+  .arrowR {
+    width: 50%;
+    height: 1350px;
+    right: -30%;
+    top: 30%;
+    padding-top: 5px;
+    position: absolute;
+    z-index: 999;
+    opacity: 0.5;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .hero-section-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #hero-section {
+    max-width: 100vw;
+    overflow-x: clip;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .hero-content {
+    max-width: 100%;
+  }
+  .hero-title {
+    font-size: 3rem;
+    padding: 0;
+  }
+  .hero-text {
+    font-size: 1rem;
+    padding: 0;
+  }
+
+  .arrowR {
+    display: none;
   }
 }
