--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -133,6 +133,10 @@
     margin-bottom: 1rem;
   }
 
+  .project-container:hover .project-image {
+    transform: none;
+  }
+
   .stack-element {
     font-size: 0.7rem;
     padding: 1% 3%;
@@ -145,8 +149,27 @@
   }
 
   .project-image {
-    width: 90%;
+    width: 100%;
     left: 50%;
     transform: translateX(-50%);
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  #projects-section {
+    max-width: 100vw;
+  }
+  .project-section-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .projects-content {
+    width: 90%;
+    text-align: center;
+    padding-left: 0;
+  }
+  .project-container:hover .project-image {
+    transform: none;
   }
 }
