--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,6 +1,6 @@
 #contact-section {
   min-height: 100vh;
-  width: 100%;
+  max-width: 100vw;
   background-color: #515151;
   display: flex;
   justify-content: center;
