--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -1,11 +1,12 @@
 #hero-section {
   min-height: 100vh;
-  width: 100%;
+  max-width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   position: relative;
+  overflow-x: clip;
 }
 
 .hero-content {
@@ -15,6 +16,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  position: relative;
 }
 
 .hero-title-container {
@@ -109,7 +111,7 @@ span:hover {
   top: 5%;
   padding-top: 5px;
   position: absolute;
-  z-index: 9999;
+  z-index: 99;
 }
 
 .cls-1 {
@@ -156,7 +158,7 @@ span:hover {
     top: 30%;
     padding-top: 5px;
     position: absolute;
-    z-index: 999;
+
     opacity: 0.5;
   }
 }
@@ -189,6 +191,13 @@ span:hover {
   }
 
   .arrowR {
-    display: none;
+    width: 60%;
+    height: 1200px;
+    right: -20%;
+    top: 70%;
+
+    position: absolute;
+    opacity: 0.5;
+    z-index: 99;
   }
 }
