--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -1,6 +1,6 @@
 #projects-section {
   min-height: 100vh;
-  width: 100%;
+  max-width: 100vw;
   background-color: rgba(51, 51, 51, 0.85);
   display: flex;
   justify-content: flex-start;
