--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -153,9 +153,9 @@ span:hover {
 
   .arrowR {
     width: 50%;
-    height: 1350px;
+    height: 850px;
     right: -30%;
-    top: 30%;
+    top: 70%;
     padding-top: 5px;
     position: absolute;
 
@@ -191,13 +191,17 @@ span:hover {
   }
 
   .arrowR {
-    width: 60%;
+    width: 70%;
     height: 1200px;
-    right: -20%;
-    top: 70%;
+    right: 0;
+    top: 60%;
 
     position: absolute;
     opacity: 0.5;
     z-index: 99;
+  }
+  .mouse-scroll {
+    width: 1.5rem;
+    height: 3rem;
   }
 }
