--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -231,6 +231,12 @@
 .cls-2-2 {
   fill: #f90;
 }
+.arrow-text2 {
+  fill: #f90;
+  font-weight: bold;
+  font-family: Satoshi;
+  font-size: 2.3em;
+}
 
 /* MEDIA QUERIES */
 
@@ -344,6 +350,7 @@
     padding-top: 5px;
     position: absolute;
     opacity: 0.5;
+    transform: rotate(15deg);
   }
 }
 
@@ -385,11 +392,14 @@
   .arrowL {
     width: 70%;
     height: 1200px;
-    left: -30%;
+    left: -20%;
     top: 53%;
     z-index: 9;
     position: absolute;
     opacity: 0.5;
     transform: rotate(15deg);
+  }
+  .arrow-text2 {
+    font-size: 1.9em;
   }
 }
