--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -126,6 +126,13 @@ span:hover {
   fill: #f90;
 }
 
+.arrow-text1 {
+  fill: #f90;
+  font-weight: bold;
+  font-family: Satoshi;
+  font-size: 2.2em;
+}
+
 /* MEDIA QUERIES */
 
 @media only screen and (max-width: 1024px) {
@@ -161,6 +168,10 @@ span:hover {
 
     opacity: 0.5;
   }
+
+  #arrow-text-hero {
+    fill: #fff;
+  }
 }
 
 @media only screen and (max-width: 480px) {
@@ -193,7 +204,7 @@ span:hover {
   .arrowR {
     width: 70%;
     height: 1200px;
-    right: 0;
+    right: -10%;
     top: 60%;
 
     position: absolute;
