--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -128,6 +128,13 @@
   position: absolute;
 }
 
+.arrow-text {
+  fill: #f90;
+  font-weight: bold;
+  font-family: Satoshi;
+  font-size: 2em;
+}
+
 @media only screen and (max-width: 1024px) {
   .project-container {
     flex-direction: column;
@@ -191,6 +198,7 @@
     bottom: -25%;
     padding-top: 5px;
     position: absolute;
+    opacity: 0.5;
   }
   .arrMidLeft {
     right: 10%;
@@ -223,6 +231,7 @@
     height: 550px;
     bottom: -38%;
     padding-top: 5px;
+    opacity: 0.5;
     position: absolute;
   }
   .arrMidLeft {
@@ -230,5 +239,8 @@
   }
   .arrMidRight {
     left: 5%;
+  }
+  .arrow-text {
+    font-size: 2.2em;
   }
 }
