navbar bug fixed

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -9,6 +9,8 @@
 .headerContainer {
   position: relative;
   z-index: 9999;
+  display: flex;
+  justify-content: center;
 }
 .header {
   box-sizing: border-box;
@@ -29,7 +31,7 @@
   transition: all 0.4s ease-in-out;
   border-radius: 70px;
   width: 75%;
-  margin-left: 12.5%;
+
   margin-top: 5px;
   height: 85px;
 }
