--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ body:before {
   width: 100%;
   min-height: 100vh;
   background-size: 30%;
-  background-image: url("./pattern.svg");
+  background-image: url("pattern.svg");
   background-repeat: repeat;
   opacity: 0.05;
 }
