--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -13,7 +13,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background-image: url("/pattern.svg");
+  background-image: url("../../../pattern.svg");
   background-size: 30%;
   background-repeat: repeat;
   opacity: 0.05;
