--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -155,7 +155,7 @@
   width: 100%;
   max-height: 100%;
   background-size: 10%;
-  background-image: url("../../../pattern.svg");
+  background-image: url("../../pattern.svg");
   background-repeat: repeat;
   opacity: 1;
   z-index: 999;
