font finally fixed

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -234,7 +234,7 @@
 .arrow-text2 {
   fill: #f90;
   font-weight: bold;
-  font-family: Satoshi;
+  font-family: "Satoshi", sans-serif;
   font-size: 2.3em;
 }
 
