--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -131,7 +131,7 @@ span:hover {
 .arrow-text1 {
   fill: #f90;
   font-weight: bold;
-  font-family: Satoshi;
+  font-family: "Satoshi", sans-serif;
   font-size: 2.2em;
 }
 
